tests/baselines/reference/jsdocTypeTagRequiredParameters.errors.txt
tests/cases/conformance/jsdoc/a.js(8,1): error TS2554: Expected 1 arguments, but got 0.
tests/cases/conformance/jsdoc/a.js(9,1): error TS2554: Expected 1 arguments, but got 0.


==== tests/cases/conformance/jsdoc/a.js (2 errors) ====
    /** @type {function(string): void} */
    const f = (value) => {
    };
    /** @type {(s: string) => void} */
    function g(s) {
    }
    
    f() // should error
    ~~~
!!! error TS2554: Expected 1 arguments, but got 0.
    g() // should error
    ~~~
!!! error TS2554: Expected 1 arguments, but got 0.
    